# SortingVisualizer

./: CMakeLists.txt  Readme.md  run.bat
Theme/: Colors.cpp  Colors.h
src/: main.cpp
src/App/: App.cpp  App.h
src/SortingAlgorithms/: Sorting.cpp  Sorting.h
src/Visualizer/: SVisu.cpp  SVisu.h
